Finish contact form

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,7 +40,7 @@
 		</section>
 		<section id="content">
 			<div id="mission">
-				<div class="inner">
+				<div class="subtitle">
 					<h1>I love <span class="highlight">making stuff</span> and here you'll find my projects and the stories behind them.</h1>
 				</div>
 			</div>
@@ -56,7 +56,20 @@
 				<div class="content">
 					<div class="text">
 						<p>
-							Hello world
+							I'm a 12<sup>th</sup> grade student attending Westview High School.
+						</p>
+						<p>
+							I <span class="highlight">love</span> computer science and am always trying to learn new things.
+						</p>
+						<p>
+							Currently, I'm proficient in <span class="highlight">15</span> programming languages, including C, C++, Java, C#, HTML, Javascript, CSS, PHP,
+							SQL, Ruby, Python, Lua, Coffeescript, Go, D, and Haskell.
+						</p>
+						<p>
+							I've complete projects in reverse engineering, robotics, computer vision, web development and mobile & desktop application development.
+						</p>
+						<p>
+							Here's how it all started:
 						</p>
 					</div>
 					<div class="wrapper">
@@ -73,7 +86,26 @@
 								<div class="waypoint"></div>
 								<div class="label">
 									<h2>Started programming in C</h2>
-									<p>Test test test</p>
+									<span class="more">
+										<p>I taught myself through reading <em>C How to Program</em> by Deitel, taken off of my dad's bookshelf.</p>
+									</span>
+								</div>
+							</li>
+							<li>
+								<time>
+									<span>
+										10<sup>th</sup> grade
+									</span>
+									<span>
+										May '12
+									</span>
+								</time>
+								<div class="waypoint"></div>
+								<div class="label">
+									<h2>USA Computing Olympiad Finalist Camp</h2>
+									<span class="more">
+										<p>After beginning competitive programming in 9<sup>th</sup> grade, I was <a href="http://www.usaco.org/index.php?page=finalists12">selected</a> as 1 of 16 high school students who attended the <a href="http://www.usaco.org/index.php?page=camp">2012 USACO finalist camp</a>.</p>
+									</span>
 								</div>
 							</li>
 							<li>
@@ -87,8 +119,27 @@
 								</time>
 								<div class="waypoint"></div>
 								<div class="label">
-									<h2>USACO</h2>
-									<p>Test test test</p>
+									<h2>USA Computing Olympiad Finalist Camp</h2>
+									<span class="more">
+										<p>Although I bombed the first two contests, I still managed to attend the <a href="http://www.usaco.org/index.php?page=finalists13">2013 USACO finalist camp</a>!</p>
+									</span>
+								</div>
+							</li>
+							<li>
+								<time>
+									<span>
+										11<sup>th</sup> grade
+									</span>
+									<span>
+										Jun '13
+									</span>
+								</time>
+								<div class="waypoint"></div>
+								<div class="label">
+									<h2>Research Science Institute</h2>
+									<span class="more">
+										<p>At <a href="http://www.cee.org/news/research-science-institute-mit-hosts-81-high-school-students">RSI</a>, I conducted research under Mr. Andrew Wang at the MIT Computer Science and Artificial Intelligence Laboratory (CSAIL). My project looked at visualization strategies in collaborative temporal planning.</p>
+									</span>
 								</div>
 							</li>
 						</ul>
@@ -99,8 +150,52 @@
 				<div class="header parallax">
 					<h1 class="header">Contact</h1>
 				</div>
+				<div class="content">
+					<div class="subtitle">
+						<h1>Feel free to <span class="highlight">contact me</span> through any of the following means!</h1>
+					</div>
+					<div class="form">
+						<form method="POST">
+							<ul>
+								<li>
+									<input autocomplete="off" type="text" id="name" name="name" placeholder="name" required/>
+								</li>
+								<li>
+									<input autocomplete="off" type="email" id="email" name="email" placeholder="email" required/>
+								</li>
+								<li>
+									<textarea autocomplete="off" id="message" name="message" placeholder="message" required></textarea>
+								</li>
+								<li>
+									<button type="submit" class="submit">Send</button>
+								</li>
+							</ul>
+						</form>
+					</div>
+					<div class="icons">
+						<div class="email"><a href="mailto:me@stanleycen.com"></a></div>
+						<div class="github"><a href="http://github.com/scen/"></a></div>
+						<div class="skype"><a href="skype:priority_queue"></a></div>
+					</div>
+				</div>
+			</div>
+			<div id="about-site">
+				<div class="header parallax">
+					<h1 class="header">About this site</h1>
+				</div>
 			</div>
 		</section>
-		<div style="min-height: 5000px"></div>
+		<div style="min-height: 500px"></div>
+		<footer>
+			<div class="wrapper">
+				<span class="copyleft">
+					&copy; Stanley Cen 2013
+				</span>
+				<span class="latest-commit">
+					<% if !is_heroku? or (is_heroku? and $heroku and $last_commit and $the_commit) %>Running latest commit <a href="https://github.com/scen/stanleycen.com/commit/<%= get_commit_sha %>">
+                <%= get_commit_sha[0...7] %></a> <%= get_commit_time.to_pretty %>: <%= '"' + get_commit_msg.split(/\n/).first + '"' %><% end %>
+				</span>
+			</div>
+		</footer>
 	</body>
 </html>
