--- a/views/main.scss
+++ b/views/main.scss
@@ -463,7 +463,7 @@ $timeline_collapse_width: 46em;
             border-radius: 5px;
             a {
               text-decoration: none;
-              color: #343434;
+              color: #fff;
               border-bottom: 1px dotted;
               font-weight: 400;
             }
