--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
 	<head>
 		<title>Stanley Cen</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+		<link rel="author" href="humans.txt" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'/>
 		<link href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.3/normalize.min.css" rel="stylesheet" type="text/css"/>
 		<link href="/main.css" rel="stylesheet" type="text/css"/>
@@ -189,12 +190,21 @@
 				<div class="wrapper">
 					<div class="text">
 						<p>This website is an <span class="highlight">open-source</span> Sinatra web application running on Ruby 1.9.3 and lives somewhere in the Heroku cloud.</p>
-						<p>Check out <a href="/humans.txt">humans.txt</a>!</p>
+						<p>It's powered by lots of awesome things made by amazing people:
+							<ul>
+								<li>jQuery</li>
+								<li>Sass</li>
+								<li>Sinatra</li>
+							</ul>
+						</p>
+						<p>This is my latest (probably 6<sup>th</sup>) redesign of the site, featuring parallax scrolling and responsive design!</p>
+						<div class="humanstxt">
+							<a href="/humans.txt"><img src="/logo-humans.png"/></a>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<div style="min-height: 500px"></div>
 		<footer>
 			<div class="wrapper">
 				<span class="copyleft">
